remove goa_* prefixes from resources
